examples/test/testpolicy14142.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14142
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key35: value22
      key7: value5
      key40: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value37
      podSelector:
        matchLabels:
          key1: value0
          key29: value41
